# stratback

./: .gitignore  README.md  VWAPBounceOptimize.py  db.sqlite3  db.sqlite3-journal  pyproject.toml  requirements.txt
data/: NVDA_5m.csv  QQQ_5m.csv  TSLA_5m.csv
examples/: doubleCloudWFO.py  singleCloudWFO.py
stratback/backtesting/: _stats.py
stratback/strategy/: MTFVWAPSingleCloudMAStrategy.py  MTFVWAPStrategy.py  VWAPBounceStrategy.py  __init__.py  doubleCloudMAStrategy.py  doubleCloudMAStrategyV1.py  doubleCloudMAStrategyVWAP.py  doubleCloudMAVWAPStrategy.py  singleCloudMAStrategy.py  singleCloudMAStrategyV2.py  singleCloudMAStrategyV3.py  singleCloudMAStrategyV4.py
stratback/utils/: TALibrary.py  TOS_API_wrapper.py  __init__.py  blackscholes.py
stratback/walkforward/: __init__.py  walkforward.py
