[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratback"
version = "0.0.1"
authors = [
  { name="Huy Nguyen", email="huynguyen2406@gmail.com" },
]
description = "Strategy backtest and walkforward optimization"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
