[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratback"
version = "0.1.7.9"
authors = [
  { name="Huy Nguyen", email="huynguyen2406@gmail.com" },
]
description = "Strategy backtest and walkforward optimization"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bokeh==2.4.3",
    "httpx==0.23.0",
    "numpy==1.23.5",
    "optuna==3.2.0",
    "pandas>=1.5.3",
    "pandas_ta==0.3.14b",
    "plotly==5.15.0",
    "python-dotenv==1.0.0",
    "scikit_optimize==0.9.0",
    "scipy==1.10.0",
    "tda_api==1.6.0",
    "tqdm==4.65.0",
    "vectorbt==0.24.3",
    "yfinance==0.2.22",
    ]


[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
